# Vanguard8

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.claude/: deepseek-settings.json
docs/emulator/: 00-overview.md  01-build.md  02-emulation-loop.md  03-cpu-and-bus.md  04-video.md  05-audio.md  06-debugger.md  07-implementation-plan.md  08-compatibility-audit.md  09-1.0-readiness.md  10-desktop-gui-audit.md  11-pre-gui-audit.md  15-second-pass-audit.md  16-rom-readiness-audit.md  current-milestone.md
docs/emulator/milestones/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  (+10 more)
docs/process/: milestone-acceptance-checklist.md
docs/spec/: 00-overview.md  01-cpu.md  02-video.md  03-audio.md  04-io.md
docs/tasks/: README.md  task-index.md
docs/tasks/active/: M02-T01-z180-adapter-and-reset.md  M02-T02-mmu-translation-and-bbr-guardrails.md  M02-T03-interrupt-lines-and-boot-rom-proof.md  M03-T01-master-cycle-counter-and-scheduler-core.md  M03-T02-blanking-and-vclk-events.md  M03-T03-headless-runtime-controls.md  M04-T01-v9938-ports-vram-and-palette.md  M04-T02-graphic4-renderer-and-r23-scroll.md  M04-T03-display-upload-and-frame-dumps.md  M05-T01-second-vdp-and-compositor.md  M05-T02-sprites-and-status-flags.md  M05-T03-vdp-a-status-and-irq-routing.md  M06-T01-controller-devices-and-sdl-input.md  M06-T02-config-and-rom-open-flow.md  M06-T03-minimal-frontend-ux-controls.md  M07-T01-ym2151-and-ay8910-surface.md  M07-T02-msm5205-and-int1-vclk.md  M07-T03-mixer-resampler-and-audio-hashes.md  M08-T01-dma-transfer-paths.md  M08-T02-timers-and-counter-exposure.md  M08-T03-vdp-command-engine-and-ce-timing.md  M09-T02-core-inspection-panels.md  M09-T03-breakpoints-watchpoints-and-logs.md  M10-T02-rewind-and-input-replay.md  M10-T03-headless-regression-ci.md  M11-T01-vdp-mode-expansion.md  M11-T02-compatibility-and-performance-pass.md  M11-T03-doc-closure-and-1-0-readiness.md  M12-T01-sdl-runtime-and-window-host.md  M12-T02-display-and-audio-backends.md  M13-T01-vdp-read-path-and-cpu-audit.md  M13-T02-sprite-compatibility-expansion.md  M13-T03-graphic1-graphic2-and-sprite-mode1.md  M14-T01-trace-and-lightweight-runtime-debug.md  M14-T02-symbol-loading-and-annotation.md  M42-T01-timed-scf-opcode-coverage.md  M43-T01-logical-peek-row-prefix-format.md  M47-T01-mame-z180-core-import.md  M48-T01-pacmanv8-t017-audio-digest-repin.md
docs/tasks/blocked/: M32-T01-frontend-live-audio-playback.md  M39-T01-timed-pair-incdec-and-cb-prefix-opcode-coverage.md  M40-T01-timed-ex-de-hl-and-or-hl-opcode-coverage.md  M41-T01-timed-srl-h-and-rr-l-opcode-coverage.md  M43-T01-logical-peek-row-prefix-format.md  M44-T01-pacmanv8-t021-remaining-compatibility-closure.md  M45-T01-timed-and-r-and-and-hl-opcode-coverage.md  README.md
docs/tasks/completed/: M00-T01-bootstrap-build-layout.md  M00-T02-test-harness-and-no-op-shell.md  M01-T01-cartridge-and-sram-devices.md  M01-T02-bus-routing-and-open-bus.md  M01-T03-banking-and-port-stubs.md  M02-T01-z180-adapter-and-reset.md  M02-T02-mmu-translation-and-bbr-guardrails.md  (+69 more)
shaders/: crt.frag  scale.frag  scale.vert
showcase/: README.md
showcase/assets/: README.md
showcase/docs/: agent-kickoff-prompts.md  asset-guidelines.md  current-milestone.md  final-review-handoff.md  milestone-acceptance-checklist.md  showcase-implementation-plan.md  showcase-rom-plan.md
showcase/src/: README.md  showcase.asm
showcase/tasks/: README.md  task-index.md
showcase/tests/: README.md  milestone-01-checkpoints.md  milestone-02-checkpoints.md  milestone-03-checkpoints.md  milestone-04-checkpoints.md  milestone-05-checkpoints.md  milestone-06-checkpoints.md  milestone-07-checkpoints.md
showcase/tools/: README.md
src/: CMakeLists.txt  headless_main.cpp  main.cpp
src/core/: CMakeLists.txt  bus.cpp  bus.hpp  config.cpp  config.hpp  emulator.cpp  emulator.hpp  hash.cpp  hash.hpp  logging.cpp  logging.hpp  rewind.cpp  rewind.hpp  save_state.cpp  save_state.hpp  scheduler.cpp  scheduler.hpp  symbols.cpp  symbols.hpp
src/core/audio/: audio_mixer.cpp  audio_mixer.hpp  ay8910.cpp  ay8910.hpp  ayumi_vendor.cpp  msm5205_adapter.cpp  msm5205_adapter.hpp  opm_vendor.cpp  sample.hpp  ym2151.cpp  ym2151.hpp
src/core/cpu/: z180_adapter.cpp  z180_adapter.hpp
src/core/io/: controller.cpp  controller.hpp
src/core/memory/: cartridge.cpp  cartridge.hpp  sram.cpp  sram.hpp
src/core/replay/: recorder.cpp  recorder.hpp  replayer.cpp  replayer.hpp  types.hpp
src/core/video/: compositor.hpp  v9938.cpp  v9938.hpp
src/debugger/: CMakeLists.txt  audio_panel.hpp  bank_panel.cpp  bank_panel.hpp  cpu_panel.cpp  cpu_panel.hpp  debugger.cpp  debugger.hpp  interrupt_panel.cpp  interrupt_panel.hpp  memory_panel.cpp  memory_panel.hpp  trace_panel.cpp  trace_panel.hpp  vdp_panel.cpp  vdp_panel.hpp
src/frontend/: CMakeLists.txt  app.cpp  app.hpp  audio_output.cpp  audio_output.hpp  display.cpp  display.hpp  display_presenter.cpp  display_presenter.hpp  headless.cpp  headless.hpp  headless_inspect.cpp  headless_inspect.hpp  input.cpp  input.hpp  perf_overlay.hpp  rom_loader.cpp  rom_loader.hpp  runtime.cpp  runtime.hpp  sdl_window.cpp  sdl_window.hpp  video_fixture.cpp  video_fixture.hpp
tests/: CMakeLists.txt  test_audio.cpp  test_bus.cpp  test_cpu.cpp  test_debugger.cpp  test_debugger_logs.cpp  test_debugger_panels.cpp  test_frontend_backends.cpp  test_frontend_runtime.cpp  test_headless.cpp  test_input.cpp  test_integration.cpp  test_rewind_replay.cpp  test_save_state.cpp  test_scaffold.cpp  test_scheduler.cpp  test_symbols.cpp  test_trace.cpp  test_video.cpp
tests/audio/: README.md
tests/cpu/: README.md
tests/golden/: headless_observability_report.txt
tests/integration/: README.md
tests/replays/: README.md  m49-t025-controller-replay.rom  m49-t025-controller-replay.v8r  replay_fixture.v8r
tests/video/: README.md
(+74 files in other folders)
